Moving into folders and restoring lost documents

--- a/data_making/scripts/json_formatting_of_prelimenary_blame_detection.ipynb
+++ b/data_making/scripts/json_formatting_of_prelimenary_blame_detection.ipynb
@@ -12,6 +12,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15c3edda",
+   "metadata": {},
+   "source": [
+    "This script was used to format data into something that Label studio could work with. Essentially this was only used in structuring data for the gold labelled validation set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a2eb9900",
